syntax = "proto3";

option csharp_namespace = "GRpcHello";

//Align the package name to the one in https://github.com/grpc/grpc/blob/master/examples/protos/helloworld.proto
//so that the examples in that repo can be used as gRPC server/client in our tests.
package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
